--- a/src/v6.md
+++ b/src/v6.md
@@ -3,12 +3,12 @@ HOST: https://api.wheely.com/v6/
 
 # Спецификация API v6
 
-:[](v6/introduction.md)
+:[v6/introduction.md](v6/introduction.md)
 
 
-:[](v6/endpoints.md)
+:[v6/endpoints.md](v6/endpoints.md)
 
 
 # Data Structures
 
-:[](v6/models.md)
+:[v6/models.md](v6/models.md)
