--- a/src/v6.md
+++ b/src/v6.md
@@ -5,6 +5,10 @@ HOST: https://api.wheely.com/v6/
 
 :[v6/introduction.md](v6/introduction.md)
 
+## Общая информация
+
+Все эндпоинты сгрупированы по приложениям.
+
 
 :[v6/endpoints.md](v6/endpoints.md)
 
@@ -12,3 +16,5 @@ HOST: https://api.wheely.com/v6/
 # Data Structures
 
 :[v6/models.md](v6/models.md)
+
+:[v6/definitions.md](v6/definitions.md)
